# simple-ical-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  flake.nix  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  test.yml
scripts/: release.py
src/: __init__.py  ical_utils.py  main.py  models.py  routes.py  settings.py
src/utils/: __init__.py  ical.py  location.py  time.py
tests/data/: allday.csv  birthdays.csv
tests/unit/: test_location.py  test_server.py
