[project]
name = "simple-ical-server"
version = "0.1.0"
description = "A lightweight Python server built with FastAPI that dynamically generates and serves iCal (.ics) files from .csv data files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "icalendar>=6.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytz>=2025.2",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]