[project]
name = "simple-ical-server"
version = "0.1.3"
description = "A lightweight Python server built with FastAPI that dynamically generates and serves iCal (.ics) files from .csv data files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "icalendar>=6.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytz>=2025.2",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "semver>=3.0.4",
]
